# android

./: .gitignore  README.md  buildozer.spec  hot_reload.py  main.py  pyproject.toml  requirements.txt  settings.gradle.kts
.github/workflows/: build.yml  code-quality.yml
android/: app.py  screens.kv
app/: build.gradle.kts
app/src/androidTest/java/com/henriquesebastiao/confy/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/henriquesebastiao/confy/: ChatActivity.kt  ConnectToUserActivity.kt  MainActivity.kt
app/src/main/res/layout/: activity_chat.xml  activity_connect_to_user.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/henriquesebastiao/confy/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
