[project]
name = "android"
version = "0.0.1"
description = ""
authors = [
    {name = "Henrique Sebastião",email = "contato@henriquesebastiao.com"}
]
readme = "README.md"
requires-python = ">=3.9.23,<3.10"
dependencies = [
    "kivy (>=2.3.1,<3.0.0)",
    "kivymd2 (>=2.0.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
Cython = "==0.29.36"
watchdog = "^6.0.0"
buildozer = "==1.2.0"
ruff = "^0.12.5"
taskipy = "^1.14.1"
radon = "^6.0.1"
bandit = "^1.8.6"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff format .; ruff check . --fix'
radon = 'radon cc ./android -a -na'
bandit = 'bandit -r ./android'
run = 'poetry run python main.py'
dev = 'poetry run python hot_reload.py'